--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-native": "0.74.1",
     "react-native-document-picker": "^9.3.0",
     "react-native-fs": "^2.20.0",
+    "react-native-get-music-files": "^2.2.4",
+    "react-native-image-colors": "^2.4.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
