--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react-native-vector-icons": "^6.4.18",
+    "expo": "^51.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-document-picker": "^9.3.0",
+    "react-native-bootsplash": "^5.5.3",
     "react-native-fs": "^2.20.0",
     "react-native-get-music-files": "^2.2.4",
     "react-native-image-colors": "^2.4.0",
@@ -27,6 +28,7 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
+    "react-native-svg-transformer": "^1.4.0",
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.1.0",
     "zustand": "^4.5.2"
