--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.4.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "^51.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-bootsplash": "^5.5.3",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-get-music-files": "^2.2.4",
     "react-native-image-colors": "^2.4.0",
     "react-native-linear-gradient": "^2.8.3",
